--- a/style.css
+++ b/style.css
@@ -22,10 +22,24 @@ canvas {
   display: block;
 }
 
-#uiContainer {
+#uiCamera {
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 3;
+  font-family: monospace;
+  pointer-events: none;
+
+  text-shadow:
+   -1px -1px 0 #FFF,
+    1px -1px 0 #FFF,
+    -1px 1px 0 #FFF,
+     1px 1px 0 #FFF;
+}
+#uiContainer {
+  position: absolute;
+  top: 10px;
+  left: 50px;
   z-index: 3;
   font-family: monospace;
   pointer-events: none;
