--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ canvas {
   opacity: 0.8;
 }
 #ui>div {
+  margin-top: 5%;
+  margin-bottom: 5%;
   pointer-events: none;
 }
 #ui input, #ui select, #ui option, #ui canvas {
